--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,15 +20,16 @@
         android:id="@+id/botonEstrella"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        android:backgroundTint="#FF7788"
-        android:tint="#CABACA"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@id/imagenAndroid"
+        android:backgroundTint="#FF5522"
+        android:clickable="true"
+        android:contentDescription="botonEstrella"
+        app:backgroundTintMode="src_atop"
         app:layout_constraintBottom_toBottomOf="@id/imagenAndroid"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imagenAndroid"
         app:scrCompat="@drawable.ic_star"
-        android:contentDescription="botonEstrella"/>
+        app:tint="@color/white" />
 
     <ImageView
         android:id="@+id/imagenTelefono"
@@ -57,9 +58,81 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Móvil"
-
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/telefonoA"
         app:layout_constraintLeft_toLeftOf="@id/telefonoA"
 />
+
+    <ImageView
+        android:id="@+id/imagensms1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_sms"
+        app:layout_constraintTop_toTopOf="@id/imagenTelefono"
+        app:layout_constraintRight_toRightOf="@id/botonEstrella"/>
+
+    <TextView
+        android:id="@+id/telefonoB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="652478159"
+        android:layout_marginTop="15dp"
+        app:layout_constraintLeft_toLeftOf="@id/telefonoA"
+        app:layout_constraintTop_toBottomOf="@id/movilA"/>
+
+    <TextView
+        android:id="@+id/movilB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Móvil"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/telefonoB"
+        app:layout_constraintLeft_toLeftOf="@id/telefonoB" />
+
+    <ImageView
+        android:id="@+id/imagensms2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_sms"
+        app:layout_constraintRight_toRightOf="@id/botonEstrella"
+        app:layout_constraintTop_toTopOf="@id/telefonoB"/>
+
+    <View
+        android:id="@+id/divisor"
+        android:layout_width="409dp"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="433dp"
+        app:layout_constraintTop_toBottomOf="@id/movilB"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <ImageView
+        android:id="@+id/imagenemail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_email"
+        app:layout_constraintLeft_toLeftOf="@id/imagenTelefono"
+        app:layout_constraintTop_toBottomOf="@id/divisor"
+        android:layout_marginTop="30dp"/>
+
+    <TextView
+        android:id="@+id/correo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="teoriagallinacea@gmail.com"
+        app:layout_constraintTop_toTopOf="@id/imagenemail"
+        app:layout_constraintLeft_toLeftOf="@id/telefonoA"/>
+
+    <TextView
+        android:id="@+id/descMail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="e-Mail"
+        app:layout_constraintLeft_toLeftOf="@id/correo"
+        app:layout_constraintTop_toBottomOf="@id/correo"
+        android:layout_marginTop="15dp"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
