--- a/app/src/main/res/layout/practica6b.xml
+++ b/app/src/main/res/layout/practica6b.xml
@@ -33,4 +33,45 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <ImageView
+        android:id="@+id/imagenDolar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_pig_1"
+        app:layout_constraintRight_toLeftOf="@id/vista1"
+        app:layout_constraintBottom_toTopOf="@id/vista2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <ImageView
+        android:id="@+id/imagenDolar2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_pig_2"
+        app:layout_constraintBottom_toTopOf="@id/vista2"
+        app:layout_constraintLeft_toRightOf="@id/vista1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <ImageView
+        android:id="@+id/imagenqr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_pig_3"
+        app:layout_constraintRight_toLeftOf="@id/vista1"
+        app:layout_constraintTop_toBottomOf="@id/vista2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <ImageView
+        android:id="@+id/imagenTransac"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_pig_4"
+        app:layout_constraintLeft_toRightOf="@id/vista1"
+        app:layout_constraintTop_toBottomOf="@id/vista2"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
