--- a/app/src/main/res/layout/practica6b.xml
+++ b/app/src/main/res/layout/practica6b.xml
@@ -105,7 +105,7 @@
         android:id="@+id/textoMirarTra"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="REVIEW YOUR TRANSACTIONS"
+        android:text="REVIEW YOUR\n TRANSACTIONS"
         app:layout_constraintTop_toBottomOf="@id/imagenTransac"
         app:layout_constraintLeft_toRightOf="@id/vista1"
         app:layout_constraintRight_toRightOf="parent"/>
