--- a/app/src/main/res/layout/practica6c.xml
+++ b/app/src/main/res/layout/practica6c.xml
@@ -16,10 +16,11 @@
     <ImageView
         android:id="@+id/cartelTransformers"
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
+        android:layout_height="120dp"
         app:srcCompat="@drawable/transformers_cartel"
-        app:layout_constraintTop_toBottomOf="@id/bannerTransformers"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@id/titulo"
+        app:layout_constraintRight_toLeftOf="@id/titulo"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <View
         android:id="@+id/divisor"
@@ -36,7 +37,17 @@
         android:id="@+id/titulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="20sp"
         android:text="Transformers: el despertar\n de las bestias"
+        app:layout_constraintRight_toLeftOf="@id/imagenCompartir"
+        app:layout_constraintTop_toBottomOf="@id/bannerTransformers" />
+
+    <ImageView
+        android:id="@+id/imagenCompartir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_share_black_24dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bannerTransformers" />
 </androidx.constraintlayout.widget.ConstraintLayout>
