--- a/app/src/main/res/layout/practica6c.xml
+++ b/app/src/main/res/layout/practica6c.xml
@@ -62,7 +62,7 @@
         app:layout_constraintLeft_toLeftOf="parent"/>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/bComprar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Comprar"
@@ -70,4 +70,36 @@
         android:layout_marginRight="10dp"
         app:layout_constraintTop_toBottomOf="@id/cartelTransformers"
         app:layout_constraintRight_toRightOf="parent"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/bPlay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:backgroundTint="#FF5511"
+        app:srcCompat="@drawable/ic_play_arrow_black_24dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toBottomOf="@id/bAlquilar"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/bFamilia"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:backgroundTint="#11EEDD"
+        app:srcCompat="@drawable/ic_family"
+        app:layout_constraintTop_toTopOf="@id/bPlay"
+        app:layout_constraintLeft_toRightOf="@id/bPlay"
+        app:layout_constraintRight_toLeftOf="@id/bRTomat"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/bRTomat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:srcCompat="@drawable/tomato"
+        app:layout_constraintTop_toTopOf="@id/bPlay"
+        app:layout_constraintRight_toRightOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
