--- a/app/src/main/res/layout/practica6c.xml
+++ b/app/src/main/res/layout/practica6c.xml
@@ -22,16 +22,6 @@
         app:layout_constraintRight_toLeftOf="@id/titulo"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
-    <View
-        android:id="@+id/divisor"
-        android:layout_width="409dp"
-        android:layout_height="1dp"
-        android:layout_marginEnd="2dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintTop_toBottomOf="@id/bannerTransformers"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/titulo"
@@ -39,6 +29,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textSize="20sp"
+        android:layout_marginRight="5dp"
         android:text="Transformers: el despertar\n de las bestias"
         app:layout_constraintRight_toLeftOf="@id/imagenCompartir"
         app:layout_constraintTop_toBottomOf="@id/bannerTransformers" />
@@ -55,7 +46,8 @@
         android:id="@+id/bAlquilar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Alquilar"
+        android:text="ALQUILAR"
+        android:backgroundTint="#000000"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
         app:layout_constraintTop_toBottomOf="@id/cartelTransformers"
@@ -65,7 +57,8 @@
         android:id="@+id/bComprar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Comprar"
+        android:text="COMPRAR"
+        android:backgroundTint="#000000"
         android:layout_marginTop="20dp"
         android:layout_marginRight="10dp"
         app:layout_constraintTop_toBottomOf="@id/cartelTransformers"
@@ -111,7 +104,30 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:backgroundTint="#11FF00"
+        android:layout_marginRight="10dp"
         app:srcCompat="@drawable/ic_email"
         app:layout_constraintTop_toTopOf="@id/bPlay"
         app:layout_constraintRight_toRightOf="parent" />
+
+    <View
+        android:id="@+id/divisor"
+        android:layout_width="409dp"
+        android:layout_height="1dp"
+        android:layout_marginEnd="2dp"
+        android:background="?android:attr/listDivider"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toBottomOf="@id/bFamilia"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textoDescripcion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:text="Descripción de la película"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/divisor"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
